Fixed white Safari scrollbar on white (temporary workaround)

--- a/public_html/styles/global.less
+++ b/public_html/styles/global.less
@@ -22,8 +22,14 @@ html, body {
 
 body {
     height: 100%;
-    background-color: @color1;
+    background-color: white;
 }
+
+/*
+body.darkBackgroundLaterToFixScrollbarColor {
+    background-color: @color1;    
+}
+*/
 
 main#contents {
     margin: auto;
